<resources>
    <string name="app_name">Sniffer</string>
    <string name="forget">Forgot password?</string>
    <string name="logPhone">Enter phone number</string>
    <string name="password">Password</string>
    <string name="logIn">Log in</string>
    <string name="signUp">Sign up</string>
    <string name="link">Click here</string>
    <string name="register">Not registered?</string>
    <string name="fName">First name</string>
    <string name="lName">Last name</string>
    <string name="phone">Phone</string>
    <string name="title_activity_scanner">Scanner</string>

</resources>
